--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,10 @@
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
+/[Oo]utput/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+/[Ww]eb[Gg][Ll] [Bb]uilds/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
@@ -60,6 +62,8 @@ sysinfo.txt
 *.aab
 *.unitypackage
 *.app
+*.zip
+webgl_sharing
 
 # Crashlytics generated file
 crashlytics-build.properties
